arrumando as bases do html da paginas

--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -53,8 +53,7 @@
 
     <!-- Conteúdo Principal -->
     <main class="container mx-auto px-4 text-white flex-1 py-8">
-      <h1 class="text-4xl font-bold text-center mb-6">Bem-vindo à BSidesRJ</h1>
-      <p class="text-center mb-10">O maior evento de segurança da informação do Rio de Janeiro</p>
+      <h1 class="text-4xl font-bold text-center mb-6">Patrocinadores</h1>
       
       <!-- Seção de Patrocinadores -->
       <section class="sponsor-section bg-white bg-opacity-70 rounded-lg p-8 mx-auto max-w-5xl">
