update speakers page

--- a/speakers/marcelo-almeida.html
+++ b/speakers/marcelo-almeida.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Carmo - BSidesRJ 2025</title>
+    <title>Marcelo Almeida - BSidesRJ 2025</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/custom.css">
 </head>
@@ -48,24 +48,24 @@
             <div class="max-w-4xl mx-auto bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8">
                 <div class="text-center mb-12">
                     <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
-                        <img src="../images/speakers/lucas-carmo.jpg" alt="Lucas Carmo" class="w-full h-full object-cover">
+                        <img src="../images/speakers/marcelo-almeida.jpg" alt="Marcelo Almeida" class="w-full h-full object-cover">
                     </div>
-                    <h1 class="text-4xl font-bold text-white mb-2">Lucas Carmo</h1>
-                    <p class="text-xl text-yellow-400">lucas@hakaisecurity.io</p>
+                    <h1 class="text-4xl font-bold text-white mb-2">Marcelo Almeida</h1>
+                    <p class="text-xl text-yellow-400">Security Engineer</p>
                 </div>
 
                 <div class="mb-12">
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">The Shadow Behind Red Team Radiance</h2>
-                    <p class="text-lg text-white mb-4">10:10 - Palco Principal</p>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Segurança em Aplicações Serverless</h2>
+                    <p class="text-lg text-white mb-4">14:40 - Palco Principal</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma exploração profunda das técnicas avançadas de Red Team, revelando aspectos menos conhecidos e estratégias inovadoras para testes de penetração. A palestra traz uma perspectiva única sobre metodologias de ataque e defesa.</p>
+                        <p class="mb-6">Uma análise profunda sobre os desafios e melhores práticas de segurança em arquiteturas serverless, incluindo configuração, monitoramento e proteção de funções.</p>
                     </div>
                 </div>
 
                 <div>
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Lucas Carmo</h2>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Marcelo Almeida</h2>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Lucas Carmo é um especialista em segurança cibernética com experiência em testes de penetração e análise de vulnerabilidades.</p>
+                        <p class="mb-6">Marcelo Almeida é um engenheiro de segurança especializado em arquiteturas serverless e cloud-native. Com experiência em grandes projetos de transformação digital, tem ajudado organizações a implementar segurança em ambientes modernos de computação.</p>
                     </div>
                 </div>
             </div>
