--- a/schedule.html
+++ b/schedule.html
@@ -112,8 +112,8 @@
                         <a href="speakers/paulo-raphael.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">15:20</p>
-                        <p class="font-medium text-white">Breaking Windows: A Journey Through Process Injection Techniques</p>
+                        <p class="text-lg font-semibold text-yellow-400">16:00</p>
+                        <p class="font-medium text-white">Inception — Tips and tricks I've learned reversing vulnerabilities!</p>
                         <p class="text-sm text-gray-300">Nelson Brito</p>
                         <a href="speakers/nelson-brito.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
