--- a/speakers/zoziel-pinto-freire.html
+++ b/speakers/zoziel-pinto-freire.html
@@ -1,35 +1,97 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoziel Pinto Freire - BSides RJ 2025</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Zoziel Pinto Freire - BSidesRJ 2025</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/custom.css">
 </head>
-<body class="bg-gray-100">
-    <div class="container mx-auto px-4 py-8">
-        <div class="bg-white rounded-lg shadow-lg p-8 max-w-3xl mx-auto">
-            <div class="flex items-center space-x-6 mb-8">
-                <img class="w-32 h-32 rounded-full object-cover" src="../images/speakers/zoziel-pinto-freire.jpg" alt="Zoziel Pinto Freire" onerror="this.src='../images/speakers/default-avatar.png'">
+<body class="overflow-x-hidden min-h-screen relative">
+    <!-- Elemento de background fixo -->
+    <div class="fixed-bg"></div>
+
+    <!-- Conteúdo que ficará sobre o background -->
+    <div class="content relative z-20 bg-black bg-opacity-50 flex flex-col min-h-screen">
+        <!-- Header -->
+        <header class="bg-black bg-opacity-60 backdrop-blur-md shadow-lg py-3 flex items-center justify-between px-4">
+            <a href="../index.html">
+                <img src="../images/logo.png" alt="BSidesRJ Logo" class="max-h-14">
+            </a>
+            <!-- Menu para desktop -->
+            <nav class="hidden md:flex space-x-4 text-white text-lg">
+                <a href="../index.html" class="hover:text-yellow-400 transition">Home</a>
+                <a href="../schedule.html" class="hover:text-yellow-400 transition">Agenda</a>
+                <a href="../index.html#patrocinadores" class="hover:text-yellow-400 transition">Patrocinadores</a>
+                <a href="../contato.html" class="hover:text-yellow-400 transition">Contato</a>
+            </nav>
+            <!-- Botão do menu móvel -->
+            <button id="mobile-menu-btn" class="md:hidden text-white ml-4">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+            </button>
+        </header>
+
+        <!-- Menu móvel -->
+        <nav id="mobile-menu" class="hidden md:hidden bg-black bg-opacity-90 text-white w-full">
+            <ul class="flex flex-col p-4 space-y-2">
+                <li><a href="../index.html" class="block hover:text-yellow-400 transition">Home</a></li>
+                <li><a href="../schedule.html" class="block hover:text-yellow-400 transition">Agenda</a></li>
+                <li><a href="../index.html#patrocinadores" class="block hover:text-yellow-400 transition">Patrocinadores</a></li>
+                <li><a href="../contato.html" class="block hover:text-yellow-400 transition">Contato</a></li>
+            </ul>
+        </nav>
+
+        <!-- Main Content -->
+        <main class="flex-grow container mx-auto px-4 py-16">
+            <div class="max-w-4xl mx-auto bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8">
+                <div class="text-center mb-12">
+                    <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
+                        <img src="../images/speakers/zoziel-pinto-freire.jpg" alt="Zoziel Pinto Freire" class="w-full h-full object-cover">
+                    </div>
+                    <h1 class="text-4xl font-bold text-white mb-2">Zoziel Pinto Freire</h1>
+                    <p class="text-xl text-yellow-400">zoza.info@gmail.com</p>
+                </div>
+
+                <div class="mb-12">
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Ransomware vs EDR: Inside the Mind of Attackers</h2>
+                    <p class="text-lg text-white mb-4">12:10 - Palco Principal</p>
+                    <div class="prose prose-lg text-gray-300">
+                        <p class="mb-6">Uma análise profunda das técnicas utilizadas por atacantes para burlar sistemas EDR em ataques de ransomware, incluindo análises detalhadas de casos reais e estratégias de proteção.</p>
+                    </div>
+                </div>
+
                 <div>
-                    <h1 class="text-3xl font-bold">Zoziel Pinto Freire</h1>
-                    <p class="text-gray-600">zoza.info@gmail.com</p>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">About Zoziel Pinto Freire</h2>
+                    <div class="prose prose-lg text-gray-300">
+                        <p class="mb-6">Zoziel Pinto Freire é um especialista em segurança da informação.</p>
+                    </div>
                 </div>
             </div>
-            
-            <div class="mb-8">
-                <h2 class="text-2xl font-semibold mb-4">Palestra</h2>
-                <h3 class="text-xl font-medium mb-2">Ransomware vs EDR: Inside the Mind of Attackers</h3>
-                <p class="text-gray-700">Uma análise profunda das técnicas utilizadas por atacantes para burlar sistemas EDR em ataques de ransomware, incluindo análises detalhadas de casos reais e estratégias de proteção.</p>
-                <div class="mt-4">
-                    <p class="text-gray-600"><strong>Horário:</strong> 12:10 - Palco Principal</p>
-                </div>
+
+            <div class="text-center mt-8">
+                <a href="../schedule.html" class="inline-block bg-yellow-400 text-black font-bold py-3 px-6 rounded-lg hover:bg-yellow-500 transition duration-300">
+                    Back to Schedule
+                </a>
             </div>
-            
-            <div>
-                <a href="../schedule.html" class="text-blue-600 hover:text-blue-800">← Voltar para a programação</a>
-            </div>
-        </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="text-center p-4 bg-black bg-opacity-80 text-white">
+            &copy; 2025 BSidesRJ - All rights reserved.
+        </footer>
     </div>
+
+    <!-- JavaScript for mobile menu -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const mobileMenuBtn = document.getElementById('mobile-menu-btn');
+            const mobileMenu = document.getElementById('mobile-menu');
+            mobileMenuBtn.addEventListener('click', function () {
+                mobileMenu.classList.toggle('hidden');
+            });
+        });
+    </script>
 </body>
 </html>
