--- a/schedule.html
+++ b/schedule.html
@@ -66,56 +66,62 @@
                         <p class="text-white">Opening Ceremony</p>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">09:30</p>
+                        <p class="text-lg font-semibold text-yellow-400">09:30 - 10:05</p>
                         <p class="font-medium text-white">O que vi em dez anos como pesquisador de segurança</p>
                         <p class="text-sm text-gray-300">Fernando Mercês</p>
                         <a href="speakers/fernando-merces.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">10:10</p>
+                        <p class="text-lg font-semibold text-yellow-400">10:10 - 10:45</p>
                         <p class="font-medium text-white">The Shadow Behind Red Team Radiance</p>
                         <p class="text-sm text-gray-300">Lucas Carmo</p>
                         <a href="speakers/lucas-carmo.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">10:50</p>
+                        <p class="text-lg font-semibold text-yellow-400">10:50 - 11:25</p>
                         <p class="font-medium text-white">Game Hacking: do Zero ao Kernel</p>
                         <p class="text-sm text-gray-300">Abid Lohan</p>
                         <a href="speakers/abid-lohan.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">11:30</p>
+                        <p class="text-lg font-semibold text-yellow-400">11:30 - 12:05</p>
                         <p class="font-medium text-white">Malwares & EDRs</p>
                         <p class="text-sm text-gray-300">José Luiz Negreira</p>
                         <a href="speakers/jose-luiz-negreira.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">12:10</p>
+                        <p class="text-lg font-semibold text-yellow-400">12:10 - 12:45</p>
                         <p class="font-medium text-white">Ransomware vs EDR: Inside the Mind of Attackers</p>
                         <p class="text-sm text-gray-300">Zoziel Pinto Freire</p>
                         <a href="speakers/zoziel-pinto-freire.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">13:00 - 14:00</p>
+                        <p class="text-lg font-semibold text-yellow-400">13:00 - 14:30</p>
                         <p class="font-medium text-white">Lunch Break</p>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">14:00</p>
+                        <p class="text-lg font-semibold text-yellow-400">14:30 - 15:05</p>
                         <p class="font-medium text-white">The Darkside of the Moon - How to Really Think About Anti Forensic</p>
                         <p class="text-sm text-gray-300">Iago Blambila</p>
                         <a href="speakers/iago-blambila.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">14:40</p>
+                        <p class="text-lg font-semibold text-yellow-400">15:10 - 15:45</p>
                         <p class="font-medium text-white">Exploração de vulnerabilidades de autorização em empresas de escala global</p>
                         <p class="text-sm text-gray-300">Paulo Raphael</p>
                         <a href="speakers/paulo-raphael.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">16:00</p>
+                        <p class="text-lg font-semibold text-yellow-400">15:50 - 16:25</p>
                         <p class="font-medium text-white">Inception — Tips and tricks I've learned reversing vulnerabilities!</p>
                         <p class="text-sm text-gray-300">Nelson Brito</p>
                         <a href="speakers/nelson-brito.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                    </div>
+                    <div class="border-b border-gray-600 pb-4">
+                        <p class="text-lg font-semibold text-yellow-400">16:30 - 17:05</p>
+                        <p class="font-medium text-white">Segurança em Sistemas Distribuídos</p>
+                        <p class="text-sm text-gray-300">Marcelo Almeida</p>
+                        <a href="speakers/marcelo-almeida.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                 </div>
             </div>
@@ -137,44 +143,44 @@
                         <p class="text-white">Sala fechadas (Keynote)</p>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">10:10</p>
+                        <p class="text-lg font-semibold text-yellow-400">10:10 - 10:45</p>
                         <p class="font-medium text-white">Abusing GitHub Actions</p>
                         <p class="text-sm text-gray-300">Eurico Nicacio</p>
                         <a href="speakers/eurico-nicacio.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">10:50</p>
+                        <p class="text-lg font-semibold text-yellow-400">10:50 - 11:25</p>
                         <p class="font-medium text-white">An approach of FBP for rapid development of offensive security tools</p>
                         <p class="text-sm text-gray-300">Heitor Gouvêa</p>
                         <a href="speakers/heitor-gouvea-2.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">11:30</p>
+                        <p class="text-lg font-semibold text-yellow-400">11:30 - 12:05</p>
                         <p class="font-medium text-white">Visualização de modelos de machine learning não-supervisionados</p>
-                        <p class="text-sm text-gray-300">Lucas Gribel</p>
-                        <a href="speakers/lucas-gribel.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
-                    </div>
-                    <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">12:10</p>
-                        <p class="font-medium text-white">Privacidade, open-source e descentralização: Nym mixnet</p>
                         <p class="text-sm text-gray-300">Pedro Sydenstricker</p>
                         <a href="speakers/pedro-sydenstricker.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">13:00 - 14:00</p>
-                        <p class="font-medium text-white">Lunch Break</p>
-                    </div>
-                    <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">14:00</p>
-                        <p class="font-medium text-white">Extensões malvadas: entendendo e se defendendo das brechas de segurança no VS Code</p>
+                        <p class="text-lg font-semibold text-yellow-400">12:10 - 12:45</p>
+                        <p class="font-medium text-white">Análise de Malware em Dispositivos IoT</p>
                         <p class="text-sm text-gray-300">Bruno Dantas</p>
                         <a href="speakers/bruno-dantas.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">14:40</p>
+                        <p class="text-lg font-semibold text-yellow-400">13:00 - 14:30</p>
+                        <p class="font-medium text-white">Lunch Break</p>
+                    </div>
+                    <div class="border-b border-gray-600 pb-4">
+                        <p class="text-lg font-semibold text-yellow-400">14:30 - 15:05</p>
                         <p class="font-medium text-white">Anatomia de um mini-AS: explorando fragmentos da infraestrutura global da internet</p>
                         <p class="text-sm text-gray-300">Rodrigo Ferreira</p>
                         <a href="speakers/rodrigo-ferreira.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                    </div>
+                    <div class="border-b border-gray-600 pb-4">
+                        <p class="text-lg font-semibold text-yellow-400">15:10 - 15:45</p>
+                        <p class="font-medium text-white">Segurança em Containers e Kubernetes</p>
+                        <p class="text-sm text-gray-300">Luiz Custódio</p>
+                        <a href="speakers/luiz-custodio.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                 </div>
             </div>
