--- a/speakers/jose-luiz-negreira.html
+++ b/speakers/jose-luiz-negreira.html
@@ -48,7 +48,7 @@
             <div class="max-w-4xl mx-auto bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8">
                 <div class="text-center mb-12">
                     <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
-                        <img src="../images/speakers/jose-luiz-negreira.jpg" alt="José Luiz Negreira" class="w-full h-full object-cover">
+                        <img src="../images/speakers/default-avatar.png" alt="José Luiz Negreira" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">José Luiz Negreira Castro de Oliveira</h1>
                     <p class="text-xl text-yellow-400">joselOliveira11@gmail.com</p>
