--- a/speakers/paulo-raphael.html
+++ b/speakers/paulo-raphael.html
@@ -48,7 +48,7 @@
             <div class="max-w-4xl mx-auto bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8">
                 <div class="text-center mb-12">
                     <div class="w-48 h-48 rounded-full overflow-hidden mx-auto mb-6">
-                        <img src="../images/speakers/paulo-raphael.jpg" alt="Paulo Raphael" class="w-full h-full object-cover">
+                        <img src="../images/speakers/default-avatar.png" alt="Paulo Raphael" class="w-full h-full object-cover">
                     </div>
                     <h1 class="text-4xl font-bold text-white mb-2">Paulo Raphael Gomes Mota</h1>
                     <p class="text-xl text-yellow-400">paulo_rgomes@hotmail.com</p>
