--- a/schedule.html
+++ b/schedule.html
@@ -113,15 +113,19 @@
                     </div>
                     <div class="border-b border-gray-600 pb-4">
                         <p class="text-lg font-semibold text-yellow-400">15:50 - 16:25</p>
+                        <p class="font-medium text-white">Segurança em Sistemas Distribuídos</p>
+                        <p class="text-sm text-gray-300">Marcelo Almeida</p>
+                        <a href="speakers/marcelo-almeida.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                    </div>
+                    <div class="border-b border-gray-600 pb-4">
+                        <p class="text-lg font-semibold text-yellow-400">16:30 - 17:05</p>
                         <p class="font-medium text-white">Inception — Tips and tricks I've learned reversing vulnerabilities!</p>
                         <p class="text-sm text-gray-300">Nelson Brito</p>
                         <a href="speakers/nelson-brito.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">16:30 - 17:05</p>
-                        <p class="font-medium text-white">Segurança em Sistemas Distribuídos</p>
-                        <p class="text-sm text-gray-300">Marcelo Almeida</p>
-                        <a href="speakers/marcelo-almeida.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                        <p class="text-lg font-semibold text-yellow-400">17:10 - 17:40</p>
+                        <p class="font-medium text-white">Sorteios e Cerimônia de Encerramento</p>
                     </div>
                 </div>
             </div>
@@ -181,6 +185,14 @@
                         <p class="font-medium text-white">Segurança em Containers e Kubernetes</p>
                         <p class="text-sm text-gray-300">Luiz Custódio</p>
                         <a href="speakers/luiz-custodio.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                    </div>
+                    <div class="border-b border-gray-600 pb-4">
+                        <p class="text-lg font-semibold text-yellow-400">16:30 - 17:05</p>
+                        <p class="text-white">Sala fechada (Keynote de encerramento)</p>
+                    </div>
+                    <div class="border-b border-gray-600 pb-4">
+                        <p class="text-lg font-semibold text-yellow-400">17:10 - 17:40</p>
+                        <p class="text-white">Sala fechada (Cerimônia de encerramento)</p>
                     </div>
                 </div>
             </div>
