--- a/schedule.html
+++ b/schedule.html
@@ -1,60 +1,49 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Schedule - BSides Rio de Janeiro</title>
-  <!-- Tailwind CSS via CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <!-- CSS customizado -->
-  <link rel="stylesheet" href="css/custom.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BSides Rio de Janeiro 2025 - Schedule</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #000;
+            background-image: url('assets/images/background.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+        }
+    </style>
 </head>
-<body class="overflow-x-hidden min-h-screen relative">
-  <!-- Elemento de background fixo -->
-  <div class="fixed-bg"></div>
-
-  <!-- Conteúdo que ficará sobre o background -->
-  <div class="content relative z-20 bg-black bg-opacity-50 flex flex-col min-h-screen">
-    
-    <!-- Header (parte do fluxo) -->
-    <header class="bg-black bg-opacity-60 backdrop-blur-md shadow-lg py-3 flex items-center justify-between px-4">
-      <a href="index.html">
-        <img src="images/logo.png" alt="BSidesRJ Logo" class="max-h-14">
-      </a>
-      <!-- Menu para desktop -->
-      <nav class="hidden md:flex space-x-4 text-white text-lg">
-        <a href="index.html" class="hover:text-yellow-400 transition">Home</a>
-        <a href="schedule.html" class="hover:text-yellow-400 transition">Agenda</a>
-        <a href="patrocinadores.html" class="hover:text-yellow-400 transition">Patrocinadores</a>
-        <a href="contato.html" class="hover:text-yellow-400 transition">Contato</a>
-      </nav>
-      <!-- Botão do menu móvel -->
-      <button id="mobile-menu-btn" class="md:hidden text-white ml-4">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" 
-             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
-                d="M4 6h16M4 12h16M4 18h16"></path>
-        </svg>
-      </button>
-    </header>
-
-    <!-- Menu móvel (parte do fluxo) -->
-    <nav id="mobile-menu" class="hidden md:hidden bg-black bg-opacity-90 text-white w-full">
-      <ul class="flex flex-col p-4 space-y-2">
-         <li><a href="index.html" class="block hover:text-yellow-400 transition">Home</a></li>
-         <li><a href="schedule.html" class="block hover:text-yellow-400 transition">Agenda</a></li>
-         <li><a href="patrocinadores.html" class="block hover:text-yellow-400 transition">Patrocinadores</a></li>
-         <li><a href="contato.html" class="block hover:text-yellow-400 transition">Contato</a></li>
-      </ul>
+<body class="min-h-screen text-gray-100">
+    <!-- Navigation -->
+    <nav class="bg-black bg-opacity-80 p-4 fixed w-full top-0 z-50">
+        <div class="container mx-auto flex flex-wrap justify-between items-center">
+            <a href="index.html" class="text-yellow-400 text-xl font-bold">BSides RJ 2025</a>
+            <button class="md:hidden text-yellow-400" onclick="toggleMenu()">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M4 6h16M4 12h16m-16 6h16"></path>
+                </svg>
+            </button>
+            <div id="mobile-menu" class="hidden md:flex w-full md:w-auto mt-4 md:mt-0">
+                <ul class="flex flex-col md:flex-row md:space-x-4 space-y-2 md:space-y-0">
+                    <li><a href="index.html" class="text-yellow-400 hover:text-yellow-300">Home</a></li>
+                    <li><a href="schedule.html" class="text-yellow-400 hover:text-yellow-300">Schedule</a></li>
+                    <li><a href="speakers.html" class="text-yellow-400 hover:text-yellow-300">Speakers</a></li>
+                    <li><a href="sponsors.html" class="text-yellow-400 hover:text-yellow-300">Sponsors</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <!-- Main Content -->
-    <main class="container mx-auto px-4 py-8">
-        <h1 class="text-4xl font-bold text-center text-white mb-8">Schedule BSides RJ 2025</h1>
+    <main class="container mx-auto px-4 pt-24 pb-12">
+        <h1 class="text-4xl font-bold text-center text-yellow-400 mb-8">Conference Schedule</h1>
         
-        <div class="grid md:grid-cols-2 gap-8">
-            <!-- Palco Principal -->
-            <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg shadow-lg p-6">
+        <!-- Schedule Grid -->
+        <div class="grid md:grid-cols-2 gap-6">
+            <!-- Main Stage -->
+            <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg shadow-lg p-4 md:p-6">
                 <h2 class="text-2xl font-bold mb-4 text-center text-white">Main Stage</h2>
                 <div class="space-y-4">
                     <div class="border-b border-gray-600 pb-4">
@@ -124,8 +113,8 @@
                 </div>
             </div>
 
-            <!-- Palco Secundário -->
-            <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg shadow-lg p-6">
+            <!-- Secondary Stage -->
+            <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg shadow-lg p-4 md:p-6">
                 <h2 class="text-2xl font-bold mb-4 text-center text-white">Secondary Stage</h2>
                 <div class="space-y-4">
                     <div class="border-b border-gray-600 pb-4">
@@ -198,20 +187,34 @@
     </main>
 
     <!-- Footer -->
-    <footer class="text-center p-4 bg-black bg-opacity-80 text-white">
-      &copy; 2025 BSidesRJ - All rights reserved.
+    <footer class="bg-black bg-opacity-80 text-white py-8">
+        <div class="container mx-auto px-4">
+            <div class="flex flex-col md:flex-row justify-between items-center">
+                <div class="text-center md:text-left mb-4 md:mb-0">
+                    <h3 class="text-xl font-bold text-yellow-400">BSides Rio de Janeiro 2025</h3>
+                    <p class="mt-2">Security Conference</p>
+                </div>
+                <div class="flex space-x-4">
+                    <a href="#" class="text-yellow-400 hover:text-yellow-300">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"></path>
+                        </svg>
+                    </a>
+                    <a href="#" class="text-yellow-400 hover:text-yellow-300">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
-  </div>
 
-  <!-- JavaScript for mobile menu -->
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const mobileMenuBtn = document.getElementById('mobile-menu-btn');
-      const mobileMenu = document.getElementById('mobile-menu');
-      mobileMenuBtn.addEventListener('click', function () {
-        mobileMenu.classList.toggle('hidden');
-      });
-    });
-  </script>
+    <script>
+        function toggleMenu() {
+            const menu = document.getElementById('mobile-menu');
+            menu.classList.toggle('hidden');
+        }
+    </script>
 </body>
 </html>
