--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
 						<div class="grid grid-cols-1 md:grid-cols-2 gap-8">
 							<a href="https://uva.br/"
 								class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-								<img src="images/patrocinadores/uva.webp" alt="UVA" class="max-h-32">
+								<img src="images/patrocinadores/uva.webp" alt="UVA" class="max-h-28">
 							</a>
 							<a href="https://www.ibliss.com.br"
 								class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-								<img src="images/patrocinadores/ibliss.png" alt="iBliss" class="max-h-32">
+								<img src="images/patrocinadores/ibliss.png" alt="iBliss" class="max-h-28">
 							</a>
 						</div>
 					</div>
@@ -178,21 +178,100 @@
 						</div>
 					</div>
 
-					<div class="mb-16">
+					<!-- <div class="mb-16">
 						<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Prata</h3>
 						<div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-							<!-- <a href="https://www.vortexsecurity.com.br" class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                <img src="images/patrocinadores/vortex.png" alt="Vortex" class="max-h-24">
-              </a> -->
+                            <a href="https://www.hatbash.com.br"
+                                class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300 col-span-1">
+                                <img src="images/patrocinadores/TitleLogoPurple.svg" alt="HatBash" class="max-h-28">
+                            </a>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="mb-16">
 						<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Bronze</h3>
 						<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-							<a href="https://www.hatbash.com.br"
-								class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
-								<img src="images/patrocinadores/TitleLogoPurple.svg" alt="HatBash" class="max-h-20">
+                            <div></div> <!-- Espaço vazio para centralizar -->
+                            <a href="https://www.hatbash.com.br"
+                                class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300 col-span-1">
+                                <img src="images/patrocinadores/TitleLogoPurple.svg" alt="HatBash" class="max-h-28">
+                            </a>
+                            <div></div> <!-- Espaço vazio para centralizar -->
+                        </div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+        <section id="patrocinadores" class="py-16">
+			<div class="container mx-auto px-4">
+				<h2 class="text-4xl font-bold text-center text-white mb-12">Apoiadores</h2>
+				<div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8 mx-auto max-w-5xl">
+					<div class="mb-16">
+						<div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+                            <a href="https://www.instagram.com/meninadecybersec/"
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/meninacybersec.jpg" alt="Menina de Cybersec" class="max-h-28">
+                            </a>
+                            <a href="https://alquymia.com.br" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/alquymia.png" alt="Alquymia" class="max-h-28">
+                            </a>
+                            <a href="https://investigaosint.com.br" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/investigaosint.png" alt="Investiga OSINT" class="max-h-28">
+                            </a>
+                            <a href="https://novatec.com.br" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/novatec.png" alt="Novatec" class="max-h-28">
+                            </a>
+                            <a href="https://ctf.chapeudepalhahacker.club" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/chapeudepalha.png" alt="Chapéu de Palha" class="max-h-28">
+                            </a>
+                            <a href="https://linktr.ee/hackinrio" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/hackinrio.png" alt="Hack in Rio" class="max-h-28">
+                            </a>
+                            <a href="https://www.instagram.com/womcy/" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/womcy.png" alt="Womcy" class="max-h-28">
+                            </a>
+                            <a href="https://www.riomakerspace.com.br" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/rms.jpeg" alt="Rio Maker Space" class="max-h-28">
+                            </a>
+                            <a href="https://linktr.ee/hackincariri" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/hackincariri.png" alt="Hack in Cariri" class="max-h-28">
+                            </a>
+                            <a href="https://www.cajusec.com.br" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/cajusec.png" alt="Cajusec" class="max-h-28">
+                            </a>
+                            <a href="https://linktr.ee/hekateinc" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/hekate.png" alt="Hekate" class="max-h-28">
+                            </a>
+                            <a href="https://linktr.ee/mentebinaria" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/mentebinaria.png" alt="Mente Binária" class="max-h-28">
+                            </a>
+                            <a href="https://nullbyte-con.org/" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/nullbyte.png" alt="NullByte" class="max-h-28">
+                            </a>
+                            <a href="https://doity.com.br/0xe-hacker-conference-2025" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/oxe.png" alt="Oxe Hacker Conference" class="max-h-28">
+                            </a>
+                            <a href="https://redteamvillage.io" 
+                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+                                <img src="/images/apoiadores/redteamvillage.png" alt="Red Team Village" class="max-h-28">
+                            </a>
+							<a href="https://www.instagram.com/meubonappetit/" 
+							class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
+							<img src="/images/apoiadores/bonappetit.png" alt="Bonappetit" class="max-h-28">
 							</a>
 						</div>
 					</div>
