--- a/schedule.html
+++ b/schedule.html
@@ -169,7 +169,7 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">09:00</p>
-                            <p class="text-white">Sala fechadas (Cerimônia de abertura)</p>
+                            <p class="text-white">Sala fechada (Cerimônia de abertura)</p>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">09:30 - 10:20</p>
